[package]
name = "rottnest"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rottnest"
crate-type = ["cdylib"]

[[bin]]
name = "rottnest"
path = "src/main.rs"

[features]
default = []                    

[dependencies]
tokenizers = { version = "0.15.2", features = ["http"] }
whatlang = "0.16.4"
opendal = "0"
zstd = "0.13.0" # Check for the latest version of zstd crate
bincode = "1.3" # For serialization and deserialization
regex = "1.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
lazy_static = "1"
bytes = "1"
thiserror = "1"
rand = "0"



[profile.release]
lto = false
bit-vec = "0.6.3"
clap = { version = "4.4.18", features = ["derive"] }
